manifests/03-networkpolicy-console-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: openshift-console
  annotations:
    include.release.openshift.io/hypershift: "true"
    include.release.openshift.io/ibm-cloud-managed: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
    capability.openshift.io/name: Console
    kubernetes.io/description: >-
      Default deny all ingress and egress traffic in the
      openshift-console namespace. The policy improves network
      isolation by ensuring that pods only communicate through
      explicitly allowed policies. Companion policies grant ingress
      from the OpenShift router and monitoring stack, and egress for
      the console UI pods.
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
